feat(twitch): add Twitch tags control and handling

--- a/app/i18n/en-US/streaming.json
+++ b/app/i18n/en-US/streaming.json
@@ -45,6 +45,7 @@
   "viewers": "viewers",
   "Refresh Chat": "Refresh Chat",
   "Your chat is currently offline": "Your chat is currently offline",
-  "Set path in Settings > Output.": "Set path in Settings > Output."
-
+  "Set path in Settings > Output.": "Set path in Settings > Output.",
+  "Select stream tags": "Select stream tags",
+  "Tag not found": "Tag not found"
 }
